--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "maska": "^3.2.0",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
