--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eMde4HSBaOJuIzqjlvT+SZdha+ekcYte3O2eUyTtn70=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql ## For Docker setup otherwise use localhost or 127.0.0.1
+DB_PORT=3306
+DB_DATABASE=ride_sharing_app
+DB_USERNAME=appuser
+DB_PASSWORD=apppass
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -33,7 +33,8 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+# BROADCAST_DRIVER=pusher
+BROADCAST_CONNECTION=pusher
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -64,6 +65,16 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-TWILIO_AUTH_TOKEN=ABCD # optional when using username and password
-TWILIO_ACCOUNT_SID=1234 # always required
-TWILIO_FROM=100000000 # optional default from
+TWILIO_AUTH_TOKEN=TOKEN # optional when using username and password
+TWILIO_ACCOUNT_SID=SID # always required
+TWILIO_FROM=+9212345678 # optional default from
+TWILIO_WHATSAPP_FROM_SANDBOX=+12345678886
+
+
+PUSHER_APP_ID=laravel
+PUSHER_APP_KEY=mykey
+PUSHER_APP_SECRET=secret
+PUSHER_HOST=127.0.0.1
+PUSHER_PORT=6001
+PUSHER_SCHEME=http
+PUSHER_APP_CLUSTER=mt1
