--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.79",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "maska": "^3.2.0",
