--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "maska": "^3.2.0",
+    "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
