--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -30,7 +30,9 @@
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
     "globals": "^16.5.0",
+    "laravel-echo": "^2.2.6",
     "prettier": "3.6.2",
+    "pusher-js": "^8.4.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
