--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:eMde4HSBaOJuIzqjlvT+SZdha+ekcYte3O2eUyTtn70=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
