Updated Dockerfiles and Api Calls.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,8 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY vue-app/package*.json ./
+RUN npm ci
 
-RUN npm install
 COPY vue-app .
 
 EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host"]
