--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,57 @@
+version: "3.9"
 
 services:
   backend:
-    image: php:8.2-apache
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
-    build: ./backend
-    container_name: ride-sharing-app-backend
+    build:
+      context: ./backend
+    container_name: laravel-backend
     ports:
-      - "80:80"
+      - "8000:8000"
     volumes:
-      - ./backend/:/var/www/html
+      - ./backend:/var/www
     depends_on:
       - mysql
-    networks:
-      - appnet
-      - ai-net
-
+    env_file:
+      - ./backend/.env
+    command: php artisan serve --host=0.0.0.0 --port=8000
 
   frontend:
-    build: ./frontend
-    container_name: ride-sharing-app-frontend
+    build:
+      context: ./frontend
+    container_name: vue-frontend
     ports:
       - "5173:5173"
-    depends_on:
-      - backend
-    networks:
-      - ai-net
     volumes:
-    - ./frontend/vue-app:/app
-    - /app/node_modules
+      - ./frontend/vue-app:/app
+      - /app/node_modules
+    command: npm run dev -- --host
 
   mysql:
-    image: 'mysql/mysql-server:8.0'
-    container_name: ride-sharing-app-mysql-db
+    image: mysql:8.0
+    container_name: mysql-db
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: ride_sharing_app
-      MYSQL_USER: appuser
-      MYSQL_PASSWORD: apppass
     ports:
       - "3306:3306"
+    environment:
+      MYSQL_DATABASE: ride_sharing_app
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: appuser
+      MYSQL_PASSWORD: apppass
     volumes:
       - mysql_data:/var/lib/mysql
-    networks:
-      - appnet
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_USER: appuser
+      PMA_PASSWORD: apppass
+    depends_on:
+      - mysql
 
 volumes:
   mysql_data:
-
-networks:
-  appnet:
-  ai-net:
-    driver: bridge
