--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,15 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/var/www
+     - ./backend:/var/www
+     - /var/www/vendor
     depends_on:
       - mysql
     env_file:
       - ./backend/.env
     command: php artisan serve --host=0.0.0.0 --port=8000
+    networks:
+    - sail
 
   frontend:
     build:
@@ -41,6 +44,8 @@ services:
       MYSQL_PASSWORD: apppass
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+    - sail
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -54,6 +59,13 @@ services:
       PMA_PASSWORD: apppass
     depends_on:
       - mysql
+    networks:
+    - sail
 
+networks:
+    sail:
+        driver: bridge
+
+        
 volumes:
   mysql_data:
